# ascpp

./: CMakeLists.txt  README.md
examples/: CMakeLists.txt
examples/draw_sprite/: CMakeLists.txt
examples/draw_sprite/res/: habr.txt
examples/draw_sprite/src/: main.cpp
modules/: CMakeLists.txt
modules/core/: CMakeLists.txt
modules/core/include/: coordinates.h  drawable.h  game_object.h  game_scene.h  renderer.h  sprite.h  sprite_loader.h
modules/core/src/: game_object.cpp  game_scene.cpp  renderer.cpp  sprite.cpp  sprite_loader.cpp
test/: CMakeLists.txt
